--- a/ExpensesClient/package.json
+++ b/ExpensesClient/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.30",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "nth-check": ">=2.0.1"
   }
 }
