--- a/ExpenseAPI/ExpenseAPI.csproj
+++ b/ExpenseAPI/ExpenseAPI.csproj
@@ -5,9 +5,9 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-  <PropertyGroup>
+   <PropertyGroup>
     <ContainerImageName>expense-api</ContainerImageName>
-    <ContainerImageTags>latest</ContainerImageTags>
+    <ContainerImageTags>latest</ContainerImageTags>y
     <PublishProfile>DefaultContainer</PublishProfile>
     <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
   </PropertyGroup>
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.11" />
     <PackageReference Include="Microsoft.NET.Build.Containers" Version="7.0.402" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
