--- a/ExpenseAPI/ExpenseAPI.csproj
+++ b/ExpenseAPI/ExpenseAPI.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
    <PropertyGroup>
-    <ContainerImageName>expense-api</ContainerImageName>
+    <ContainerImageName>expense_api</ContainerImageName>
     <ContainerImageTags>latest</ContainerImageTags>y
     <PublishProfile>DefaultContainer</PublishProfile>
     <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
