--- a/ExpenseAPI/appsettings.docker.json
+++ b/ExpenseAPI/appsettings.docker.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=postgres;Port=5432;Database=espense;User Id=appuser;Password=secret"
+      "DefaultConnection": "Server=postgres;Port=5432;Database=expense;User Id=appuser;Password=secret"
     }
   }
