--- a/ExpensesClient/package.json
+++ b/ExpensesClient/package.json
@@ -38,8 +38,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "nth-check": ">=2.0.1",
     "postcss": "^8.4.30",
-    "tailwindcss": "^3.3.3",
-    "nth-check": ">=2.0.1"
+    "tailwindcss": "^3.3.3"
   }
 }
